<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">proyectoNPI</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="title_activity_score_registrer">ScoreRegistrer</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="play">Play</string>
    <string name="scores">Scores</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="score">Score: </string>
    <string name="score_list">Scores</string>
    <string name="name">Name</string>
    <string name="name_hint">Write your name here</string>
    <string name="done">Done</string>
    <string name="worst_score">You are not good at this...</string>
    <string name="bad_score">Try again</string>
    <string name="normal_score">Not bad</string>
    <string name="good_score">Good job!</string>
    <string name="great_score">Great!</string>
    <string name="awesome_score">You are awesome!</string>

</resources>
