<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_ground_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScoreRegistrer" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/score_list"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="@color/font_color"
        android:typeface="serif" />
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="12dp"
    	android:paddingTop="12dp">

         <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	    
             <TextView
	            android:id="@+id/putNameText"
	            android:layout_width="wrap_content"
	            android:textColor="@color/font_color"
	            android:layout_height="wrap_content"
	            android:text="@string/name" />

             <EditText
                 android:id="@+id/nameText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="@string/name_hint"
                 android:textColor="@color/font_color"
                 android:textColorHint="@color/font_hint_color" >

                 <requestFocus />
             </EditText>
             
		</LinearLayout>

     	<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="6dp"
		    android:orientation="horizontal">
	    
             <TextView
                 android:id="@+id/scoreText"
                 android:textColor="@color/font_color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/score" />

           	 <TextView
           	     android:id="@+id/scoreNumberText"
           	     android:layout_width="0dp"
           	     android:textColor="@color/font_color"
           	     android:layout_height="wrap_content"
           	     android:layout_weight="1"
           	     android:gravity="right" />
             
		</LinearLayout>
         
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/font_color"
            android:paddingTop="6dp"
            android:text="@string/done" 
            android:onClick="buttonDone"/>
        
    </LinearLayout>
    
 	<fragment
  		android:id="@+id/list_fragment"
        android:name="com.npi.proyectofinal.ListFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        class="com.npi.proyectofinal.ListFragment" />
    
</LinearLayout>
