<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="16dp"
			android:paddingTop="16dp"
	        android:gravity="center"
	        android:orientation="vertical" >

	    	<Button
		    	android:id="@+id/buttonPlay"
		    	android:textColor="@color/font_color"
		    	android:layout_width="match_parent"
		     	android:layout_height="wrap_content"
		  		android:layout_gravity="center"
		   		android:text="@string/play" 
		   		android:onClick="goPlay"/>
	    	
		</LinearLayout>
    	
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="16dp"
			android:paddingTop="16dp"
	        android:gravity="center"
	        android:orientation="vertical" >
		 
			 <Button
		     	android:id="@+id/buttonScore"
		      	android:layout_width="match_parent"
		     	android:layout_height="wrap_content"
		     	android:textColor="@color/font_color"
		   		android:layout_gravity="center"
		       	android:text="@string/scores" 
		   		android:onClick="goScores"/>
			 
		 </LinearLayout>
		 
		 <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="16dp"
			android:paddingTop="16dp"
	        android:gravity="center"
	        android:orientation="vertical" >
		 
			 <Button
		    	android:id="@+id/buttonHelp"
		     	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="@color/font_color"
		   		android:layout_gravity="center"
		  	  	android:onClick="goHelp"
		    	android:text="@string/help" />
			 
		 </LinearLayout>
		 
		 <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="16dp"
			android:paddingTop="16dp"
	        android:gravity="center"
	        android:orientation="vertical" >
			 
			 <Button
				android:id="@+id/buttonExit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/font_color"
				android:layout_gravity="center"
				android:text="@string/exit" 
				android:onClick="exit"/>
			 
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
